feat: implement task listing functionality with pagination and sorting